fix: minor bug changes

--- a/client/src/components/ledNav/lednav.css
+++ b/client/src/components/ledNav/lednav.css
@@ -48,7 +48,7 @@ a {
 .led__lednav-links_container p {
     color: #072D37;
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 18px;
     line-height: 25px;
     /* text-transform: capitalize; */
