--- a/client/src/containers/avatar/avatar.css
+++ b/client/src/containers/avatar/avatar.css
@@ -22,7 +22,7 @@
 .led__right-username p {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
-    font-weight: 800;
+    font-weight: bol;
     font-size: 40px;
     text-align: center;
     /* letter-spacing: 0.23em; */
@@ -88,7 +88,7 @@
     margin-top: 35px;
     min-height: 50px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: bold;
     font-size: 30px;
     line-height: 28px;
     background: #15CD96;
