--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -122,7 +122,7 @@
     flex: 0.6;
     width: 50px;
     min-height: 50px;
-    font-weight: 400;
+    font-weight: bold;
     font-size: 20px;
     line-height: 28px;
     background: #15CD96;
