--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -65,7 +65,7 @@ a {
 .led__navbar-sign p {
     color: #072D37;
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 18px;
     line-height: 25px;
     text-transform: capitalize;
