--- a/client/src/containers/pastLedger/pastLedger.css
+++ b/client/src/containers/pastLedger/pastLedger.css
@@ -65,9 +65,9 @@
 }
 
 .led__pastLedger-feed-no {
-    width: 30%;
+    width: 10%;
     height: 100%;
-    /* font-weight: 200; */
+    font-weight: bolder;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
     background-color: #072D37;
