--- a/client/src/components/whyUs/whyUs.css
+++ b/client/src/components/whyUs/whyUs.css
@@ -1,94 +1,66 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Poppins:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,800;1,300&family=Poppins:wght@700&family=Source+Code+Pro:wght@300&display=swap');
-
-.led__bg {
-    background-color: #7fd2ed;
-}
-
-.led__whyUs {
+.led__star
+{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
-
-.led__whyUs_content {
+.led__title
+{
+    background-color: var(--deep-pink);
+}
+.led__text
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--black);
+    font-size: 96px;
+    font-weight: 900;
+}
+.points
+{
     display: flex;
     flex-direction: row;
 }
-
-.led__whyUs_content-left {
-    width: 50%;
-}
-
-.led__whyUs_content-right {
-    width: 50%;
-}
-
-.led__whyUs_header {
-    font-size: 50px;
-    padding-bottom: 30px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 800;
-    color: #072D37;
-    /* Text-decoration: underline */
-    /* font-size: 128px; */
-}
-
-.features {
-    flex-basis: 50%;
-}
-
-.features-img {
-    flex-basis: 50%;
-    margin: auto;
-}
-
-.features-img img {
-    width: 70%;
-    border-radius: 10px;
-}
-
-.features h1 {
-    text-align: left;
-    margin-bottom: 10px;
-    color: #142961;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bolder;
-    font-style: normal;
-    font-size: 25px;
-}
-
-.icon {
-    color: #0b562e;
-}
-
-.feature-description {
+.point_left
+{
     display: flex;
+    flex-basis: 40%;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 40px;
-    color: #0b562e;
-    font-family: 'Fira Code', monospace;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Source Code Pro', monospace;
-    /* font-style: italic; */
-    font-weight: bolder;
-    font-size: 18px;
-
 }
-
-.feature-icon {
-    margin-right: 10px;
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
-    line-height: 50px;
-    border-radius: 8px;
-    color: rgb(0, 0, 0);
-    /* border: 1px solid rgb(0, 0, 0) */
+.point_right
+{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    flex-basis: 60%;
 }
-
-.feature-text {
-    padding: 2px 2px;
-    text-align: initial;
+.point_title
+{
+    color: var(--pink);
+    font-size: 40px;
+    font-weight: bold;
+}
+.point_text
+{
+    color: var(--deep-grey);
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    text-align: justify;
+}
+.marker
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.star
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
