--- a/client/src/app.css
+++ b/client/src/app.css
@@ -7,6 +7,7 @@
 
     --black: #09090B;
     --deep-grey: #E2E2E2;
+    --grey: #434242;
     --white: #FAFAFA;
     --deep-pink: #FF1761;
     --pink: #FF729F;
