--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -3,21 +3,25 @@
 a {
     text-decoration: none;
     color: var(--white) !important;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: medium;
 }
 
 .led {
     position: sticky;
     top: 0;
+    z-index: 100;
+    backdrop-filter: blur(7.5px);
+    padding: 0.5rem 4rem;
 }
 
-.active {
+/* .active {
     z-index: 10;
     background: transparent;
     backdrop-filter: blur(7.5px);
     -webkit-backdrop-filter: blur(7.5px);
-}
+    padding: 0.5rem 4rem;
+} */
 
 .led__navbar {
     display: flex;
@@ -32,7 +36,7 @@ a {
     background-color: var(--deep-pink);
     color: var(--black);
     padding: 8px 16px;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
@@ -48,7 +52,7 @@ a {
     color: var(--white);
     border: 0.1px solid var(--grey);
     padding: 8px 16px;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
@@ -61,14 +65,14 @@ a {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 40%;
+    flex-basis: 30%;
 }
 
 .led__navbar-links_logo {
     display: flex;
     flex-direction: row;
     align-items: center;
-    flex-basis: 24%;
+    flex-basis: 20%;
     justify-content: space-between;
 }
 
@@ -82,7 +86,8 @@ a {
 .circular_image
 {
     border-radius: 50%;
-    border: var(--deep-grey) 1px solid;
+    border: var(--grey) 0.5px solid;
+    padding: 0.5rem;
 }
 .coloured
 {
