--- a/client/src/containers/ledger/ledger.css
+++ b/client/src/containers/ledger/ledger.css
@@ -1,10 +1,123 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:wght@800&family=Poppins:wght@700&family=Source+Code+Pro:wght@300&display=swap');
 
+.create_container
+{
+    display: flex;
+    flex-direction: row;
+    height: 554px;
 
+    gap: 0.5rem;
+}
+.text_img
+{
+    background: url('../../assets/TextEditor.svg');
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    border-radius: 12px;
+    border: none;
+}
+.create_left
+{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
 
+    gap: 0.5rem
+}
+.create_right
+{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+
+    border: 0.5px solid var(--grey);
+    border-radius: 12px;
+    padding: 2rem;
+}
+
+.options
+{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    backdrop-filter: blur(1.5px);
+    border: 0.5px solid var(--grey);
+    border-radius: 12px;
+    padding: 2rem;
+}
+.options_top
+{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+.options_bottom
+{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    align-items: center;
+    justify-content: center;
+    /* gap: 2rem; */
+}
+.update
+{
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    gap: 0.5rem;
+    border: 0.5px solid var(--grey);
+    border-radius: 12px;
+}
+.button__styling4
+{
+    /* background-color: var(--deep-pink); */
+    color: var(--deep-grey);
+    border: 0.1px solid var(--grey);
+    padding: 8px 16px;
+    font-size: 20px;
+    font-weight: 400;
+    display: flex;
+    width: 16rem;
+    font-family: 'Inter', sans-serif;
+    /* justify-content: space-between; */
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    /* border: none; */
+    border-radius: 12px;
+}
+.input_field
+{
+    background: transparent;
+    border: 0.5px solid var(--grey);
+    border-radius: 12px;
+    padding: 1rem;
+    width: 50%;
+}
+textarea{
+    background: transparent;
+    border: 0.5px solid var(--grey);
+    border-radius: 12px;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+}
+.submit_button
+{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%;
+}
 ::-webkit-input-placeholder {
     font-family: 'Poppins', sans-serif;
-    color: #072D37;
+
     font-size: 20px;
 }
 
