--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -46,12 +46,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between ;
+    font-weight: 700;
     background-color: var(--deep-pink);
     border: none;
     border-radius: 12px;
     font-size: 24px;
     color: var(--black);
     cursor: pointer;
-    width: 332px;
+    width: 360px;
 
 }
