--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -15,13 +15,6 @@ a {
     padding: 0.5rem 4rem;
 }
 
-/* .active {
-    z-index: 10;
-    background: transparent;
-    backdrop-filter: blur(7.5px);
-    -webkit-backdrop-filter: blur(7.5px);
-    padding: 0.5rem 4rem;
-} */
 
 .led__navbar {
     display: flex;
@@ -48,7 +41,7 @@ a {
 }
 .button__styling3
 {
-    /* background-color: var(--deep-pink); */
+    /* background-color: transparent; */
     color: var(--white);
     border: 0.1px solid var(--grey);
     padding: 8px 16px;
@@ -58,14 +51,19 @@ a {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
-    /* border: none; */
     border-radius: 12px;
+    transition: 0.5s ease-in-out;
+}
+.button__styling3:hover
+{
+    background-color: var(--deep-pink);
+    color: var(--black);
 }
 .led__navbar-links {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 30%;
+    flex-basis: 24%;
 }
 
 .led__navbar-links_logo {
@@ -80,17 +78,27 @@ a {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     flex-basis: 100%;
+    gap: 1rem;
 }
 .circular_image
 {
     border-radius: 50%;
     border: var(--grey) 0.5px solid;
     padding: 0.5rem;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+}
+.circular_image:hover
+{
+    background-color: var(--grey);
 }
 .coloured
 {
+    padding: 0.5rem;
+    border-radius: 12px;
+    border: var(--grey) 0.5px solid;
     color: var(--deep-pink) !important;
     font-weight: 800 !important;
 }
